# cf_plugin_demo

./: LICENSE  README.md  pyproject.toml
cf_plugin_demo/: apps.py  urls.py  utils.py
src/cf_plugin_demo/: __init__.py  forms.py  utils.py  views.py
src/cf_plugin_demo/data/: cf_demo_data.feather
src/cf_plugin_demo/templates/cf_plugin_demo/: navbar.html  user_stat_cards.html
